драг н дроп без запоминания

--- a/package.json
+++ b/package.json
@@ -46,8 +46,12 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.5",
+    "react-beautiful-dnd": "^12.2.0",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-facebook-login": "^4.1.1",
+    "react-vk": "^5.0.2",
+    "react-vk-login": "^0.0.2",
     "resolve": "1.12.2",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
