--- a/package.json
+++ b/package.json
@@ -20,5 +20,20 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0"
+    },
+    "dependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.7.4",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "laravel-mix-react-css-modules": "^1.3.0",
+        "react-facebook-login": "^4.1.1"
+    },
+    "babel": {
+        "presets": [
+            "@babel/preset-env",
+            "@babel/preset-react"
+        ],
+        "plugins": [
+            "@babel/plugin-proposal-class-properties"
+        ]
     }
 }
