--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
-        "axios": "^0.19",
+        "axios": "^0.19.0",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
@@ -25,7 +25,8 @@
         "@babel/plugin-proposal-class-properties": "^7.7.4",
         "extract-text-webpack-plugin": "^3.0.2",
         "laravel-mix-react-css-modules": "^1.3.0",
-        "react-facebook-login": "^4.1.1"
+        "react-facebook-login": "^4.1.1",
+        "react-router-dom": "^5.1.2"
     },
     "babel": {
         "presets": [
