--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "laravel-mix-react-css-modules": "^1.3.0",
         "react-facebook": "^8.1.4",
         "react-facebook-login": "^4.1.1",
+        "react-loader-spinner": "^3.1.5",
+        "react-promise-tracker": "^2.0.5",
         "react-router-dom": "^5.1.2",
         "react-vk": "^5.0.2"
     },
