--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     },
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.7.4",
+        "animate.css": "^3.7.2",
+        "animate.css-react": "^0.1.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "laravel-mix-react-css-modules": "^1.3.0",
+        "react-animated-css": "^1.2.1",
         "react-facebook": "^8.1.4",
         "react-facebook-login": "^4.1.1",
         "react-loader-spinner": "^3.1.5",
